{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 175,
  "lineage": "3aa53d09-16e6-a5da-78dd-be64f8a67b85",
  "resources": [
    {
      "module": "module.bastion-host-vm",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "UEFI_COMPATIBLE",
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/beta/projects/debian-cloud/global/images/debian-11-bullseye-v20250709",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-balanced"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/weatherscanner-466411/zones/europe-west12-b/disks/gke-bastion-host"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2025-07-24T13:07:20.740-07:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "description": "Managed by the compute-vm Terraform module.",
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/weatherscanner-466411/zones/europe-west12-b/instances/gke-bastion-host",
            "instance_id": "2738711484471127191",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "kUaTYe-jWHU=",
            "name": "gke-bastion-host",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/weatherscanner-466411/global/networks/weatherscanner-vpc",
                "network_ip": "10.0.2.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/weatherscanner-466411/regions/europe-west12/subnetworks/gke-bastion-host",
                "subnetwork_project": "weatherscanner-466411"
              }
            ],
            "project": "weatherscanner-466411",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "host_error_timeout_seconds": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/weatherscanner-466411/zones/europe-west12-b/instances/gke-bastion-host",
            "service_account": [
              {
                "email": "bastion-sa@weatherscanner-466411.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform",
                  "https://www.googleapis.com/auth/userinfo.email"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "europe-west12-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "module.bastion-host-vm.google_compute_disk.boot",
            "module.bastion-host-vm.google_compute_disk.disks",
            "module.bastion-host-vm.google_compute_region_disk.disks",
            "module.bastion-host-vm.google_compute_resource_policy.schedule",
            "module.bastion-host-vm.google_service_account.service_account",
            "module.bastion-service-account.data.google_service_account.service_account",
            "module.bastion-service-account.google_service_account.service_account",
            "module.project-gcp.data.google_bigquery_default_service_account.bq_sa",
            "module.project-gcp.data.google_project.project",
            "module.project-gcp.data.google_storage_project_service_account.gcs_sa",
            "module.project-gcp.google_access_context_manager_service_perimeter_dry_run_resource.default",
            "module.project-gcp.google_access_context_manager_service_perimeter_resource.default",
            "module.project-gcp.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.project-gcp.google_compute_shared_vpc_service_project.service_projects",
            "module.project-gcp.google_compute_shared_vpc_service_project.shared_vpc_service",
            "module.project-gcp.google_kms_crypto_key_iam_member.service_agent_cmek",
            "module.project-gcp.google_org_policy_policy.default",
            "module.project-gcp.google_project.project",
            "module.project-gcp.google_project_default_service_accounts.default_service_accounts",
            "module.project-gcp.google_project_iam_member.service_agents",
            "module.project-gcp.google_project_iam_member.shared_vpc_host_robots",
            "module.project-gcp.google_project_service.project_services",
            "module.project-gcp.google_project_service_identity.default",
            "module.vpc-gcp.google_compute_global_address.psa_ranges",
            "module.vpc-gcp.google_compute_network.network",
            "module.vpc-gcp.google_compute_network_peering.local",
            "module.vpc-gcp.google_compute_network_peering.remote",
            "module.vpc-gcp.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.vpc-gcp.google_compute_shared_vpc_service_project.service_projects",
            "module.vpc-gcp.google_compute_subnetwork.proxy_only",
            "module.vpc-gcp.google_compute_subnetwork.subnetwork",
            "module.vpc-gcp.google_service_networking_connection.psa_connection"
          ]
        }
      ]
    },
    {
      "module": "module.firewall-gcp",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-tag-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-07-24T13:06:57.542-07:00",
            "deny": [],
            "description": "Allow http to machines with matching tags.",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/weatherscanner-466411/global/firewalls/weatherscanner-vpc-ingress-tag-http",
            "log_config": [],
            "name": "weatherscanner-vpc-ingress-tag-http",
            "network": "https://www.googleapis.com/compute/v1/projects/weatherscanner-466411/global/networks/weatherscanner-vpc",
            "params": [],
            "priority": 1000,
            "project": "weatherscanner-466411",
            "self_link": "https://www.googleapis.com/compute/v1/projects/weatherscanner-466411/global/firewalls/weatherscanner-vpc-ingress-tag-http",
            "source_ranges": [
              "130.211.0.0/22",
              "209.85.152.0/22",
              "209.85.204.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "http-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.project-gcp.data.google_bigquery_default_service_account.bq_sa",
            "module.project-gcp.data.google_project.project",
            "module.project-gcp.data.google_storage_project_service_account.gcs_sa",
            "module.project-gcp.google_access_context_manager_service_perimeter_dry_run_resource.default",
            "module.project-gcp.google_access_context_manager_service_perimeter_resource.default",
            "module.project-gcp.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.project-gcp.google_compute_shared_vpc_service_project.service_projects",
            "module.project-gcp.google_compute_shared_vpc_service_project.shared_vpc_service",
            "module.project-gcp.google_kms_crypto_key_iam_member.service_agent_cmek",
            "module.project-gcp.google_org_policy_policy.default",
            "module.project-gcp.google_project.project",
            "module.project-gcp.google_project_default_service_accounts.default_service_accounts",
            "module.project-gcp.google_project_iam_member.service_agents",
            "module.project-gcp.google_project_iam_member.shared_vpc_host_robots",
            "module.project-gcp.google_project_service.project_services",
            "module.project-gcp.google_project_service_identity.default",
            "module.vpc-gcp.google_compute_global_address.psa_ranges",
            "module.vpc-gcp.google_compute_network.network",
            "module.vpc-gcp.google_compute_network_peering.local",
            "module.vpc-gcp.google_compute_network_peering.remote",
            "module.vpc-gcp.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.vpc-gcp.google_compute_shared_vpc_service_project.service_projects",
            "module.vpc-gcp.google_service_networking_connection.psa_connection"
          ]
        }
      ]
    },
    {
      "module": "module.firewall-gcp",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-tag-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-07-24T13:06:57.484-07:00",
            "deny": [],
            "description": "Allow http to machines with matching tags.",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/weatherscanner-466411/global/firewalls/weatherscanner-vpc-ingress-tag-https",
            "log_config": [],
            "name": "weatherscanner-vpc-ingress-tag-https",
            "network": "https://www.googleapis.com/compute/v1/projects/weatherscanner-466411/global/networks/weatherscanner-vpc",
            "params": [],
            "priority": 1000,
            "project": "weatherscanner-466411",
            "self_link": "https://www.googleapis.com/compute/v1/projects/weatherscanner-466411/global/firewalls/weatherscanner-vpc-ingress-tag-https",
            "source_ranges": [
              "130.211.0.0/22",
              "209.85.152.0/22",
              "209.85.204.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "https-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.project-gcp.data.google_bigquery_default_service_account.bq_sa",
            "module.project-gcp.data.google_project.project",
            "module.project-gcp.data.google_storage_project_service_account.gcs_sa",
            "module.project-gcp.google_access_context_manager_service_perimeter_dry_run_resource.default",
            "module.project-gcp.google_access_context_manager_service_perimeter_resource.default",
            "module.project-gcp.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.project-gcp.google_compute_shared_vpc_service_project.service_projects",
            "module.project-gcp.google_compute_shared_vpc_service_project.shared_vpc_service",
            "module.project-gcp.google_kms_crypto_key_iam_member.service_agent_cmek",
            "module.project-gcp.google_org_policy_policy.default",
            "module.project-gcp.google_project.project",
            "module.project-gcp.google_project_default_service_accounts.default_service_accounts",
            "module.project-gcp.google_project_iam_member.service_agents",
            "module.project-gcp.google_project_iam_member.shared_vpc_host_robots",
            "module.project-gcp.google_project_service.project_services",
            "module.project-gcp.google_project_service_identity.default",
            "module.vpc-gcp.google_compute_global_address.psa_ranges",
            "module.vpc-gcp.google_compute_network.network",
            "module.vpc-gcp.google_compute_network_peering.local",
            "module.vpc-gcp.google_compute_network_peering.remote",
            "module.vpc-gcp.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.vpc-gcp.google_compute_shared_vpc_service_project.service_projects",
            "module.vpc-gcp.google_service_networking_connection.psa_connection"
          ]
        }
      ]
    },
    {
      "module": "module.firewall-gcp",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-tag-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-07-24T13:06:57.780-07:00",
            "deny": [],
            "description": "Allow SSH to machines with matching tags.",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/weatherscanner-466411/global/firewalls/weatherscanner-vpc-ingress-tag-ssh",
            "log_config": [],
            "name": "weatherscanner-vpc-ingress-tag-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/weatherscanner-466411/global/networks/weatherscanner-vpc",
            "params": [],
            "priority": 1000,
            "project": "weatherscanner-466411",
            "self_link": "https://www.googleapis.com/compute/v1/projects/weatherscanner-466411/global/firewalls/weatherscanner-vpc-ingress-tag-ssh",
            "source_ranges": [
              "35.235.240.0/20"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.project-gcp.data.google_bigquery_default_service_account.bq_sa",
            "module.project-gcp.data.google_project.project",
            "module.project-gcp.data.google_storage_project_service_account.gcs_sa",
            "module.project-gcp.google_access_context_manager_service_perimeter_dry_run_resource.default",
            "module.project-gcp.google_access_context_manager_service_perimeter_resource.default",
            "module.project-gcp.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.project-gcp.google_compute_shared_vpc_service_project.service_projects",
            "module.project-gcp.google_compute_shared_vpc_service_project.shared_vpc_service",
            "module.project-gcp.google_kms_crypto_key_iam_member.service_agent_cmek",
            "module.project-gcp.google_org_policy_policy.default",
            "module.project-gcp.google_project.project",
            "module.project-gcp.google_project_default_service_accounts.default_service_accounts",
            "module.project-gcp.google_project_iam_member.service_agents",
            "module.project-gcp.google_project_iam_member.shared_vpc_host_robots",
            "module.project-gcp.google_project_service.project_services",
            "module.project-gcp.google_project_service_identity.default",
            "module.vpc-gcp.google_compute_global_address.psa_ranges",
            "module.vpc-gcp.google_compute_network.network",
            "module.vpc-gcp.google_compute_network_peering.local",
            "module.vpc-gcp.google_compute_network_peering.remote",
            "module.vpc-gcp.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.vpc-gcp.google_compute_shared_vpc_service_project.service_projects",
            "module.vpc-gcp.google_service_networking_connection.psa_connection"
          ]
        }
      ]
    },
    {
      "module": "module.firewall-gcp",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "custom-rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "allow-ingress-bastion-from-iap",
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2025-07-24T13:07:19.815-07:00",
            "deny": [],
            "description": "Allow ingress from a specific tag.",
            "destination_ranges": [
              "10.0.1.0/24",
              "10.0.2.0/28"
            ],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/weatherscanner-466411/global/firewalls/allow-ingress-bastion-from-iap",
            "log_config": [],
            "name": "allow-ingress-bastion-from-iap",
            "network": "https://www.googleapis.com/compute/v1/projects/weatherscanner-466411/global/networks/weatherscanner-vpc",
            "params": [],
            "priority": 1000,
            "project": "weatherscanner-466411",
            "self_link": "https://www.googleapis.com/compute/v1/projects/weatherscanner-466411/global/firewalls/allow-ingress-bastion-from-iap",
            "source_ranges": [
              "35.235.240.0/20"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.project-gcp.data.google_bigquery_default_service_account.bq_sa",
            "module.project-gcp.data.google_project.project",
            "module.project-gcp.data.google_storage_project_service_account.gcs_sa",
            "module.project-gcp.google_access_context_manager_service_perimeter_dry_run_resource.default",
            "module.project-gcp.google_access_context_manager_service_perimeter_resource.default",
            "module.project-gcp.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.project-gcp.google_compute_shared_vpc_service_project.service_projects",
            "module.project-gcp.google_compute_shared_vpc_service_project.shared_vpc_service",
            "module.project-gcp.google_kms_crypto_key_iam_member.service_agent_cmek",
            "module.project-gcp.google_org_policy_policy.default",
            "module.project-gcp.google_project.project",
            "module.project-gcp.google_project_default_service_accounts.default_service_accounts",
            "module.project-gcp.google_project_iam_member.service_agents",
            "module.project-gcp.google_project_iam_member.shared_vpc_host_robots",
            "module.project-gcp.google_project_service.project_services",
            "module.project-gcp.google_project_service_identity.default",
            "module.vpc-gcp.google_compute_global_address.psa_ranges",
            "module.vpc-gcp.google_compute_network.network",
            "module.vpc-gcp.google_compute_network_peering.local",
            "module.vpc-gcp.google_compute_network_peering.remote",
            "module.vpc-gcp.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.vpc-gcp.google_compute_shared_vpc_service_project.service_projects",
            "module.vpc-gcp.google_compute_subnetwork.subnetwork",
            "module.vpc-gcp.google_service_networking_connection.psa_connection"
          ]
        },
        {
          "index_key": "allow-ingress-gke-from-bastion",
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2025-07-24T13:07:19.790-07:00",
            "deny": [],
            "description": "Allow ingress from a specific tag.",
            "destination_ranges": [
              "10.0.1.0/24"
            ],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/weatherscanner-466411/global/firewalls/allow-ingress-gke-from-bastion",
            "log_config": [],
            "name": "allow-ingress-gke-from-bastion",
            "network": "https://www.googleapis.com/compute/v1/projects/weatherscanner-466411/global/networks/weatherscanner-vpc",
            "params": [],
            "priority": 1000,
            "project": "weatherscanner-466411",
            "self_link": "https://www.googleapis.com/compute/v1/projects/weatherscanner-466411/global/firewalls/allow-ingress-gke-from-bastion",
            "source_ranges": [
              "10.0.2.0/28"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.project-gcp.data.google_bigquery_default_service_account.bq_sa",
            "module.project-gcp.data.google_project.project",
            "module.project-gcp.data.google_storage_project_service_account.gcs_sa",
            "module.project-gcp.google_access_context_manager_service_perimeter_dry_run_resource.default",
            "module.project-gcp.google_access_context_manager_service_perimeter_resource.default",
            "module.project-gcp.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.project-gcp.google_compute_shared_vpc_service_project.service_projects",
            "module.project-gcp.google_compute_shared_vpc_service_project.shared_vpc_service",
            "module.project-gcp.google_kms_crypto_key_iam_member.service_agent_cmek",
            "module.project-gcp.google_org_policy_policy.default",
            "module.project-gcp.google_project.project",
            "module.project-gcp.google_project_default_service_accounts.default_service_accounts",
            "module.project-gcp.google_project_iam_member.service_agents",
            "module.project-gcp.google_project_iam_member.shared_vpc_host_robots",
            "module.project-gcp.google_project_service.project_services",
            "module.project-gcp.google_project_service_identity.default",
            "module.vpc-gcp.google_compute_global_address.psa_ranges",
            "module.vpc-gcp.google_compute_network.network",
            "module.vpc-gcp.google_compute_network_peering.local",
            "module.vpc-gcp.google_compute_network_peering.remote",
            "module.vpc-gcp.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.vpc-gcp.google_compute_shared_vpc_service_project.service_projects",
            "module.vpc-gcp.google_compute_subnetwork.subnetwork",
            "module.vpc-gcp.google_service_networking_connection.psa_connection"
          ]
        },
        {
          "index_key": "allow-ingress-gke-from-gke-no",
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2025-07-24T13:07:19.873-07:00",
            "deny": [],
            "description": "Allow ingress from a specific tag.",
            "destination_ranges": [
              "10.0.1.0/24"
            ],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/weatherscanner-466411/global/firewalls/allow-ingress-gke-from-gke-no",
            "log_config": [],
            "name": "allow-ingress-gke-from-gke-no",
            "network": "https://www.googleapis.com/compute/v1/projects/weatherscanner-466411/global/networks/weatherscanner-vpc",
            "params": [],
            "priority": 1000,
            "project": "weatherscanner-466411",
            "self_link": "https://www.googleapis.com/compute/v1/projects/weatherscanner-466411/global/firewalls/allow-ingress-gke-from-gke-no",
            "source_ranges": [
              "10.0.0.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.project-gcp.data.google_bigquery_default_service_account.bq_sa",
            "module.project-gcp.data.google_project.project",
            "module.project-gcp.data.google_storage_project_service_account.gcs_sa",
            "module.project-gcp.google_access_context_manager_service_perimeter_dry_run_resource.default",
            "module.project-gcp.google_access_context_manager_service_perimeter_resource.default",
            "module.project-gcp.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.project-gcp.google_compute_shared_vpc_service_project.service_projects",
            "module.project-gcp.google_compute_shared_vpc_service_project.shared_vpc_service",
            "module.project-gcp.google_kms_crypto_key_iam_member.service_agent_cmek",
            "module.project-gcp.google_org_policy_policy.default",
            "module.project-gcp.google_project.project",
            "module.project-gcp.google_project_default_service_accounts.default_service_accounts",
            "module.project-gcp.google_project_iam_member.service_agents",
            "module.project-gcp.google_project_iam_member.shared_vpc_host_robots",
            "module.project-gcp.google_project_service.project_services",
            "module.project-gcp.google_project_service_identity.default",
            "module.vpc-gcp.google_compute_global_address.psa_ranges",
            "module.vpc-gcp.google_compute_network.network",
            "module.vpc-gcp.google_compute_network_peering.local",
            "module.vpc-gcp.google_compute_network_peering.remote",
            "module.vpc-gcp.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.vpc-gcp.google_compute_shared_vpc_service_project.service_projects",
            "module.vpc-gcp.google_compute_subnetwork.subnetwork",
            "module.vpc-gcp.google_service_networking_connection.psa_connection"
          ]
        },
        {
          "index_key": "deny-from-all",
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2025-07-24T13:07:19.660-07:00",
            "deny": [],
            "description": "Allow ingress from a specific tag.",
            "destination_ranges": [
              "0.0.0.0/0"
            ],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/weatherscanner-466411/global/firewalls/deny-from-all",
            "log_config": [],
            "name": "deny-from-all",
            "network": "https://www.googleapis.com/compute/v1/projects/weatherscanner-466411/global/networks/weatherscanner-vpc",
            "params": [],
            "priority": 1000,
            "project": "weatherscanner-466411",
            "self_link": "https://www.googleapis.com/compute/v1/projects/weatherscanner-466411/global/firewalls/deny-from-all",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.project-gcp.data.google_bigquery_default_service_account.bq_sa",
            "module.project-gcp.data.google_project.project",
            "module.project-gcp.data.google_storage_project_service_account.gcs_sa",
            "module.project-gcp.google_access_context_manager_service_perimeter_dry_run_resource.default",
            "module.project-gcp.google_access_context_manager_service_perimeter_resource.default",
            "module.project-gcp.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.project-gcp.google_compute_shared_vpc_service_project.service_projects",
            "module.project-gcp.google_compute_shared_vpc_service_project.shared_vpc_service",
            "module.project-gcp.google_kms_crypto_key_iam_member.service_agent_cmek",
            "module.project-gcp.google_org_policy_policy.default",
            "module.project-gcp.google_project.project",
            "module.project-gcp.google_project_default_service_accounts.default_service_accounts",
            "module.project-gcp.google_project_iam_member.service_agents",
            "module.project-gcp.google_project_iam_member.shared_vpc_host_robots",
            "module.project-gcp.google_project_service.project_services",
            "module.project-gcp.google_project_service_identity.default",
            "module.vpc-gcp.google_compute_global_address.psa_ranges",
            "module.vpc-gcp.google_compute_network.network",
            "module.vpc-gcp.google_compute_network_peering.local",
            "module.vpc-gcp.google_compute_network_peering.remote",
            "module.vpc-gcp.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.vpc-gcp.google_compute_shared_vpc_service_project.service_projects",
            "module.vpc-gcp.google_compute_subnetwork.subnetwork",
            "module.vpc-gcp.google_service_networking_connection.psa_connection"
          ]
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-07-24T13:06:57.951-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/weatherscanner-466411/regions/europe-west12/routers/weatherscanner-nat-nat",
            "name": "weatherscanner-nat-nat",
            "network": "https://www.googleapis.com/compute/v1/projects/weatherscanner-466411/global/networks/weatherscanner-vpc",
            "project": "weatherscanner-466411",
            "region": "europe-west12",
            "self_link": "https://www.googleapis.com/compute/v1/projects/weatherscanner-466411/regions/europe-west12/routers/weatherscanner-nat-nat"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.project-gcp.data.google_bigquery_default_service_account.bq_sa",
            "module.project-gcp.data.google_project.project",
            "module.project-gcp.data.google_storage_project_service_account.gcs_sa",
            "module.project-gcp.google_access_context_manager_service_perimeter_dry_run_resource.default",
            "module.project-gcp.google_access_context_manager_service_perimeter_resource.default",
            "module.project-gcp.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.project-gcp.google_compute_shared_vpc_service_project.service_projects",
            "module.project-gcp.google_compute_shared_vpc_service_project.shared_vpc_service",
            "module.project-gcp.google_kms_crypto_key_iam_member.service_agent_cmek",
            "module.project-gcp.google_org_policy_policy.default",
            "module.project-gcp.google_project.project",
            "module.project-gcp.google_project_default_service_accounts.default_service_accounts",
            "module.project-gcp.google_project_iam_member.service_agents",
            "module.project-gcp.google_project_iam_member.shared_vpc_host_robots",
            "module.project-gcp.google_project_service.project_services",
            "module.project-gcp.google_project_service_identity.default",
            "module.vpc-gcp.google_compute_global_address.psa_ranges",
            "module.vpc-gcp.google_compute_network.network",
            "module.vpc-gcp.google_compute_network_peering.local",
            "module.vpc-gcp.google_compute_network_peering.remote",
            "module.vpc-gcp.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.vpc-gcp.google_compute_shared_vpc_service_project.service_projects",
            "module.vpc-gcp.google_service_networking_connection.psa_connection"
          ]
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": true,
            "endpoint_types": [
              "ENDPOINT_TYPE_VM"
            ],
            "icmp_idle_timeout_sec": 30,
            "id": "weatherscanner-466411/europe-west12/weatherscanner-nat-nat/weatherscanner-nat",
            "log_config": [
              {
                "enable": false,
                "filter": "ALL"
              }
            ],
            "max_ports_per_vm": 65536,
            "min_ports_per_vm": 0,
            "name": "weatherscanner-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "weatherscanner-466411",
            "region": "europe-west12",
            "router": "weatherscanner-nat-nat",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "type": "PUBLIC",
            "udp_idle_timeout_sec": 30
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.nat.google_compute_router.router",
            "module.project-gcp.data.google_bigquery_default_service_account.bq_sa",
            "module.project-gcp.data.google_project.project",
            "module.project-gcp.data.google_storage_project_service_account.gcs_sa",
            "module.project-gcp.google_access_context_manager_service_perimeter_dry_run_resource.default",
            "module.project-gcp.google_access_context_manager_service_perimeter_resource.default",
            "module.project-gcp.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.project-gcp.google_compute_shared_vpc_service_project.service_projects",
            "module.project-gcp.google_compute_shared_vpc_service_project.shared_vpc_service",
            "module.project-gcp.google_kms_crypto_key_iam_member.service_agent_cmek",
            "module.project-gcp.google_org_policy_policy.default",
            "module.project-gcp.google_project.project",
            "module.project-gcp.google_project_default_service_accounts.default_service_accounts",
            "module.project-gcp.google_project_iam_member.service_agents",
            "module.project-gcp.google_project_iam_member.shared_vpc_host_robots",
            "module.project-gcp.google_project_service.project_services",
            "module.project-gcp.google_project_service_identity.default",
            "module.vpc-gcp.google_compute_global_address.psa_ranges",
            "module.vpc-gcp.google_compute_network.network",
            "module.vpc-gcp.google_compute_network_peering.local",
            "module.vpc-gcp.google_compute_network_peering.remote",
            "module.vpc-gcp.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.vpc-gcp.google_compute_shared_vpc_service_project.service_projects",
            "module.vpc-gcp.google_service_networking_connection.psa_connection"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-gcp",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_default_routes_on_create": false,
            "description": "Terraform-managed.",
            "enable_ula_internal_ipv6": false,
            "id": "projects/weatherscanner-466411/global/networks/weatherscanner-vpc",
            "mtu": 0,
            "name": "weatherscanner-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "5253137205298146469",
            "numeric_id": "5253137205298146469",
            "project": "weatherscanner-466411",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/weatherscanner-466411/global/networks/weatherscanner-vpc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.project-gcp.data.google_bigquery_default_service_account.bq_sa",
            "module.project-gcp.data.google_project.project",
            "module.project-gcp.data.google_storage_project_service_account.gcs_sa",
            "module.project-gcp.google_access_context_manager_service_perimeter_dry_run_resource.default",
            "module.project-gcp.google_access_context_manager_service_perimeter_resource.default",
            "module.project-gcp.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.project-gcp.google_compute_shared_vpc_service_project.service_projects",
            "module.project-gcp.google_compute_shared_vpc_service_project.shared_vpc_service",
            "module.project-gcp.google_kms_crypto_key_iam_member.service_agent_cmek",
            "module.project-gcp.google_org_policy_policy.default",
            "module.project-gcp.google_project.project",
            "module.project-gcp.google_project_default_service_accounts.default_service_accounts",
            "module.project-gcp.google_project_iam_member.service_agents",
            "module.project-gcp.google_project_iam_member.shared_vpc_host_robots",
            "module.project-gcp.google_project_service.project_services",
            "module.project-gcp.google_project_service_identity.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc-gcp",
      "mode": "managed",
      "type": "google_compute_route",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "directpath-googleapis",
          "schema_version": 0,
          "attributes": {
            "as_paths": [],
            "creation_timestamp": "2025-07-24T13:06:57.408-07:00",
            "description": "Terraform-managed.",
            "dest_range": "34.126.0.0/18",
            "id": "projects/weatherscanner-466411/global/routes/weatherscanner-vpc-directpath-googleapis",
            "name": "weatherscanner-vpc-directpath-googleapis",
            "network": "https://www.googleapis.com/compute/v1/projects/weatherscanner-466411/global/networks/weatherscanner-vpc",
            "next_hop_gateway": "https://www.googleapis.com/compute/v1/projects/weatherscanner-466411/global/gateways/default-internet-gateway",
            "next_hop_hub": "",
            "next_hop_ilb": "",
            "next_hop_instance": "",
            "next_hop_instance_zone": null,
            "next_hop_inter_region_cost": "",
            "next_hop_ip": "",
            "next_hop_med": "",
            "next_hop_network": "",
            "next_hop_origin": "",
            "next_hop_peering": "",
            "next_hop_vpn_tunnel": "",
            "params": [],
            "priority": 1000,
            "project": "weatherscanner-466411",
            "route_status": "",
            "route_type": "",
            "self_link": "https://www.googleapis.com/compute/v1/projects/weatherscanner-466411/global/routes/weatherscanner-vpc-directpath-googleapis",
            "tags": null,
            "timeouts": null,
            "warnings": []
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.project-gcp.data.google_bigquery_default_service_account.bq_sa",
            "module.project-gcp.data.google_project.project",
            "module.project-gcp.data.google_storage_project_service_account.gcs_sa",
            "module.project-gcp.google_access_context_manager_service_perimeter_dry_run_resource.default",
            "module.project-gcp.google_access_context_manager_service_perimeter_resource.default",
            "module.project-gcp.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.project-gcp.google_compute_shared_vpc_service_project.service_projects",
            "module.project-gcp.google_compute_shared_vpc_service_project.shared_vpc_service",
            "module.project-gcp.google_kms_crypto_key_iam_member.service_agent_cmek",
            "module.project-gcp.google_org_policy_policy.default",
            "module.project-gcp.google_project.project",
            "module.project-gcp.google_project_default_service_accounts.default_service_accounts",
            "module.project-gcp.google_project_iam_member.service_agents",
            "module.project-gcp.google_project_iam_member.shared_vpc_host_robots",
            "module.project-gcp.google_project_service.project_services",
            "module.project-gcp.google_project_service_identity.default",
            "module.vpc-gcp.google_compute_network.network"
          ]
        },
        {
          "index_key": "private-googleapis",
          "schema_version": 0,
          "attributes": {
            "as_paths": [],
            "creation_timestamp": "2025-07-24T13:07:09.414-07:00",
            "description": "Terraform-managed.",
            "dest_range": "199.36.153.8/30",
            "id": "projects/weatherscanner-466411/global/routes/weatherscanner-vpc-private-googleapis",
            "name": "weatherscanner-vpc-private-googleapis",
            "network": "https://www.googleapis.com/compute/v1/projects/weatherscanner-466411/global/networks/weatherscanner-vpc",
            "next_hop_gateway": "https://www.googleapis.com/compute/v1/projects/weatherscanner-466411/global/gateways/default-internet-gateway",
            "next_hop_hub": "",
            "next_hop_ilb": "",
            "next_hop_instance": "",
            "next_hop_instance_zone": null,
            "next_hop_inter_region_cost": "",
            "next_hop_ip": "",
            "next_hop_med": "",
            "next_hop_network": "",
            "next_hop_origin": "",
            "next_hop_peering": "",
            "next_hop_vpn_tunnel": "",
            "params": [],
            "priority": 1000,
            "project": "weatherscanner-466411",
            "route_status": "",
            "route_type": "",
            "self_link": "https://www.googleapis.com/compute/v1/projects/weatherscanner-466411/global/routes/weatherscanner-vpc-private-googleapis",
            "tags": null,
            "timeouts": null,
            "warnings": []
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.project-gcp.data.google_bigquery_default_service_account.bq_sa",
            "module.project-gcp.data.google_project.project",
            "module.project-gcp.data.google_storage_project_service_account.gcs_sa",
            "module.project-gcp.google_access_context_manager_service_perimeter_dry_run_resource.default",
            "module.project-gcp.google_access_context_manager_service_perimeter_resource.default",
            "module.project-gcp.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.project-gcp.google_compute_shared_vpc_service_project.service_projects",
            "module.project-gcp.google_compute_shared_vpc_service_project.shared_vpc_service",
            "module.project-gcp.google_kms_crypto_key_iam_member.service_agent_cmek",
            "module.project-gcp.google_org_policy_policy.default",
            "module.project-gcp.google_project.project",
            "module.project-gcp.google_project_default_service_accounts.default_service_accounts",
            "module.project-gcp.google_project_iam_member.service_agents",
            "module.project-gcp.google_project_iam_member.shared_vpc_host_robots",
            "module.project-gcp.google_project_service.project_services",
            "module.project-gcp.google_project_service_identity.default",
            "module.vpc-gcp.google_compute_network.network"
          ]
        },
        {
          "index_key": "restricted-googleapis",
          "schema_version": 0,
          "attributes": {
            "as_paths": [],
            "creation_timestamp": "2025-07-24T13:07:21.598-07:00",
            "description": "Terraform-managed.",
            "dest_range": "199.36.153.4/30",
            "id": "projects/weatherscanner-466411/global/routes/weatherscanner-vpc-restricted-googleapis",
            "name": "weatherscanner-vpc-restricted-googleapis",
            "network": "https://www.googleapis.com/compute/v1/projects/weatherscanner-466411/global/networks/weatherscanner-vpc",
            "next_hop_gateway": "https://www.googleapis.com/compute/v1/projects/weatherscanner-466411/global/gateways/default-internet-gateway",
            "next_hop_hub": "",
            "next_hop_ilb": "",
            "next_hop_instance": "",
            "next_hop_instance_zone": null,
            "next_hop_inter_region_cost": "",
            "next_hop_ip": "",
            "next_hop_med": "",
            "next_hop_network": "",
            "next_hop_origin": "",
            "next_hop_peering": "",
            "next_hop_vpn_tunnel": "",
            "params": [],
            "priority": 1000,
            "project": "weatherscanner-466411",
            "route_status": "",
            "route_type": "",
            "self_link": "https://www.googleapis.com/compute/v1/projects/weatherscanner-466411/global/routes/weatherscanner-vpc-restricted-googleapis",
            "tags": null,
            "timeouts": null,
            "warnings": []
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.project-gcp.data.google_bigquery_default_service_account.bq_sa",
            "module.project-gcp.data.google_project.project",
            "module.project-gcp.data.google_storage_project_service_account.gcs_sa",
            "module.project-gcp.google_access_context_manager_service_perimeter_dry_run_resource.default",
            "module.project-gcp.google_access_context_manager_service_perimeter_resource.default",
            "module.project-gcp.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.project-gcp.google_compute_shared_vpc_service_project.service_projects",
            "module.project-gcp.google_compute_shared_vpc_service_project.shared_vpc_service",
            "module.project-gcp.google_kms_crypto_key_iam_member.service_agent_cmek",
            "module.project-gcp.google_org_policy_policy.default",
            "module.project-gcp.google_project.project",
            "module.project-gcp.google_project_default_service_accounts.default_service_accounts",
            "module.project-gcp.google_project_iam_member.service_agents",
            "module.project-gcp.google_project_iam_member.shared_vpc_host_robots",
            "module.project-gcp.google_project_service.project_services",
            "module.project-gcp.google_project_service_identity.default",
            "module.vpc-gcp.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-gcp",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "index_key": "europe-west12/gke",
          "schema_version": 0,
          "attributes": {
            "allow_subnet_cidr_routes_overlap": false,
            "creation_timestamp": "2025-07-24T13:06:57.997-07:00",
            "description": "Terraform-managed.",
            "enable_flow_logs": false,
            "gateway_address": "10.0.0.1",
            "id": "projects/weatherscanner-466411/regions/europe-west12/subnetworks/gke",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "gke",
            "network": "https://www.googleapis.com/compute/v1/projects/weatherscanner-466411/global/networks/weatherscanner-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "weatherscanner-466411",
            "purpose": "PRIVATE",
            "region": "europe-west12",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "172.16.0.0/20",
                "range_name": "pods"
              },
              {
                "ip_cidr_range": "192.168.0.0/24",
                "range_name": "services"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/weatherscanner-466411/regions/europe-west12/subnetworks/gke",
            "send_secondary_ip_range_if_empty": true,
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 3716147432886578318
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.project-gcp.data.google_bigquery_default_service_account.bq_sa",
            "module.project-gcp.data.google_project.project",
            "module.project-gcp.data.google_storage_project_service_account.gcs_sa",
            "module.project-gcp.google_access_context_manager_service_perimeter_dry_run_resource.default",
            "module.project-gcp.google_access_context_manager_service_perimeter_resource.default",
            "module.project-gcp.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.project-gcp.google_compute_shared_vpc_service_project.service_projects",
            "module.project-gcp.google_compute_shared_vpc_service_project.shared_vpc_service",
            "module.project-gcp.google_kms_crypto_key_iam_member.service_agent_cmek",
            "module.project-gcp.google_org_policy_policy.default",
            "module.project-gcp.google_project.project",
            "module.project-gcp.google_project_default_service_accounts.default_service_accounts",
            "module.project-gcp.google_project_iam_member.service_agents",
            "module.project-gcp.google_project_iam_member.shared_vpc_host_robots",
            "module.project-gcp.google_project_service.project_services",
            "module.project-gcp.google_project_service_identity.default",
            "module.vpc-gcp.google_compute_network.network"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "europe-west12/gke-bastion-host",
          "schema_version": 0,
          "attributes": {
            "allow_subnet_cidr_routes_overlap": false,
            "creation_timestamp": "2025-07-24T13:06:57.887-07:00",
            "description": "Terraform-managed.",
            "enable_flow_logs": false,
            "gateway_address": "10.0.2.1",
            "id": "projects/weatherscanner-466411/regions/europe-west12/subnetworks/gke-bastion-host",
            "ip_cidr_range": "10.0.2.0/28",
            "name": "gke-bastion-host",
            "network": "https://www.googleapis.com/compute/v1/projects/weatherscanner-466411/global/networks/weatherscanner-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "weatherscanner-466411",
            "purpose": "PRIVATE",
            "region": "europe-west12",
            "self_link": "https://www.googleapis.com/compute/v1/projects/weatherscanner-466411/regions/europe-west12/subnetworks/gke-bastion-host",
            "send_secondary_ip_range_if_empty": true,
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 4401206063902174350
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.project-gcp.data.google_bigquery_default_service_account.bq_sa",
            "module.project-gcp.data.google_project.project",
            "module.project-gcp.data.google_storage_project_service_account.gcs_sa",
            "module.project-gcp.google_access_context_manager_service_perimeter_dry_run_resource.default",
            "module.project-gcp.google_access_context_manager_service_perimeter_resource.default",
            "module.project-gcp.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.project-gcp.google_compute_shared_vpc_service_project.service_projects",
            "module.project-gcp.google_compute_shared_vpc_service_project.shared_vpc_service",
            "module.project-gcp.google_kms_crypto_key_iam_member.service_agent_cmek",
            "module.project-gcp.google_org_policy_policy.default",
            "module.project-gcp.google_project.project",
            "module.project-gcp.google_project_default_service_accounts.default_service_accounts",
            "module.project-gcp.google_project_iam_member.service_agents",
            "module.project-gcp.google_project_iam_member.shared_vpc_host_robots",
            "module.project-gcp.google_project_service.project_services",
            "module.project-gcp.google_project_service_identity.default",
            "module.vpc-gcp.google_compute_network.network"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "europe-west12/gke-cp",
          "schema_version": 0,
          "attributes": {
            "allow_subnet_cidr_routes_overlap": false,
            "creation_timestamp": "2025-07-24T13:06:57.917-07:00",
            "description": "Terraform-managed.",
            "enable_flow_logs": false,
            "gateway_address": "10.0.1.1",
            "id": "projects/weatherscanner-466411/regions/europe-west12/subnetworks/gke-cp",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "gke-cp",
            "network": "https://www.googleapis.com/compute/v1/projects/weatherscanner-466411/global/networks/weatherscanner-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "weatherscanner-466411",
            "purpose": "PRIVATE",
            "region": "europe-west12",
            "self_link": "https://www.googleapis.com/compute/v1/projects/weatherscanner-466411/regions/europe-west12/subnetworks/gke-cp",
            "send_secondary_ip_range_if_empty": true,
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 1517282588613356686
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.project-gcp.data.google_bigquery_default_service_account.bq_sa",
            "module.project-gcp.data.google_project.project",
            "module.project-gcp.data.google_storage_project_service_account.gcs_sa",
            "module.project-gcp.google_access_context_manager_service_perimeter_dry_run_resource.default",
            "module.project-gcp.google_access_context_manager_service_perimeter_resource.default",
            "module.project-gcp.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.project-gcp.google_compute_shared_vpc_service_project.service_projects",
            "module.project-gcp.google_compute_shared_vpc_service_project.shared_vpc_service",
            "module.project-gcp.google_kms_crypto_key_iam_member.service_agent_cmek",
            "module.project-gcp.google_org_policy_policy.default",
            "module.project-gcp.google_project.project",
            "module.project-gcp.google_project_default_service_accounts.default_service_accounts",
            "module.project-gcp.google_project_iam_member.service_agents",
            "module.project-gcp.google_project_iam_member.shared_vpc_host_robots",
            "module.project-gcp.google_project_service.project_services",
            "module.project-gcp.google_project_service_identity.default",
            "module.vpc-gcp.google_compute_network.network"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}